location modal boxes szie made smaller, row gap fixed,  filter search fixed,pageRoot height fixed

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -202,7 +202,7 @@ label.table-checkbox {
 
 .pageRoot {
   display: flex;
-  height: calc( 100vh - 120px);
+  height: calc(100vh - 120px);
   box-sizing: content-box;
   max-width: 100vw;
 }
@@ -223,6 +223,9 @@ label.table-checkbox {
 }
 #locationModal {
   z-index: 1350 !important;
+  .MuiGrid-spacing-xs-2 > .MuiGrid-item {
+    padding: 0 8px;
+  }
 }
 
 input[readonly] {
